[svn r1221] fixes for ie. font sizing still has issues on ie

--- a/mySource.css
+++ b/mySource.css
@@ -52,6 +52,7 @@ pre {
   background-color: #ffd0ff;
   overflow: scroll;
   margin: 10px;
+  color: #202020;
 }
 
 .source  pre {
